--- a/TP3.vcxproj.filters
+++ b/TP3.vcxproj.filters
@@ -21,5 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Paris.txt" />
+    <Text Include="Puy2Dome.txt" />
+    <Text Include="Allier.txt" />
   </ItemGroup>
 </Project>
